Bug 1227162 - [css-grid][css-align] Make the scrolled pseudo frame inherit more CSS Align / Grid properties. r=dholbert

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -174,7 +174,16 @@
   /* Flex container */
   flex-direction: inherit;
   flex-wrap: inherit;
-  /* CSS3 flexbox properties that apply to the flex container: */
+  /* Grid container */
+  grid-auto-columns: inherit;
+  grid-auto-rows: inherit;
+  grid-auto-flow: inherit;
+  grid-column-gap: inherit;
+  grid-row-gap: inherit;
+  grid-template-areas: inherit;
+  grid-template-columns: inherit;
+  grid-template-rows: inherit;
+  /* CSS Align */
   align-content: inherit;
   align-items: inherit;
   justify-content: inherit;
